--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* :root {
+  --bg-black: #0D0D0D;
+  --zoro-green: #006644;
+  --zoro-green-light: #00A86B;
+  --text-white: #FFFFFF;
+  --text-gray: #B3B3B3;
+  --gold: #FFD700;
+  --zoro-red: #8B0000;
+} */
